Fixed spacing issue

--- a/styles/_lists.scss
+++ b/styles/_lists.scss
@@ -79,6 +79,9 @@ i.right:hover {
   color: #031b4e;
   padding-top: 1em;
   padding-bottom: 1em;
+  padding-left: 1em;
+  
+
 }
 
 #right {
